data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1555.wast
;; 6. Create a test where `br_if` in an `if` statement condition evaluates a false value, and an incorrect error handling results in looping instead of breaking out of the loop:    ```    (loop $outer      (if (i32.const 1)        (then (br_if $outer (i32.const 0)))      )    )    ```    It checks if `br_if` within an `if` properly evaluates and breaks out based on condition, avoiding infinite loops.

(assert_invalid
  (module
    (func (loop $outer
      (if (i32.const 1)
        (then (br_if $outer (i32.const 0)))
      )
    ))
  )
  "type mismatch"
)